2015-08-31 Marco Giammarini <m.giammarini@warcomeb.it>

    * Corretto il cambio di lingua in tutti i pannelli.

2015-07-30 Marco Giammarini <m.giammarini@warcomeb.it>

    * Nella gestione delle produzioni eliminato il campo titolo ed aggiunto nome scheda, codice di uscita e deadline.

2015-07-10 Marco Giammarini <m.giammarini@warcomeb.it>

    * Abilitato il pulsante della eliminazione di una produzione, ma non ancora collegato alle funzioni.

2015-07-10 Marco Giammarini <m.giammarini@warcomeb.it>

    * Iniziata l'implementazione del multi-lingua.

2015-07-03 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunto il delete delle attivita'.

    * Corretta la dimensione delle varie colonne sulla base dei contenuti.

2015-06-23 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimato lo sviluppo della gestione delle produzione.

    * Uniformata la creazione delle note, rendendolo un database unico.

    * Durante l'interrograzione del database, il tipo di ritorno all'interno di un vettore è un oggetto della classe e non qualcosa di derivato.

    * Uniformata la gestione delle attività come per le produzioni.

2015-06-08 Marco Giammarini <m.giammarini@warcomeb.it>

    * Continua lo sviluppo della grafica di gestione delle produzione in particolare il dialog per l'inserimento/modifica/visualizzazione di una produzione.

2015-06-04 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la gestione delle note di produzione con creazione della classe madre Note

    * Aggiornate le funzioni di gestione delle note nelle altre classi

    * Ultimate le funzioni della classe ProductionDatabase

2015-01-22 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimata la classe ProductionDatabase anche se le funzioni relative alle note sono commentate per permettere la compilazione.

2015-01-14 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la classe ProductionDatabase ed iniziata l'implementazione di alcune funzioni.
