@@ -1,3 +1,11 @@
+2015-09-11 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Aggiunta la generazione di una attività dalla creazione di una produzione (Fixed: l'activityId della produzione non viene aggiornato quando passa dentro al dialog).
+
+2015-09-10 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Aggiunta la generazione di una attività dalla creazione di una produzione (WiP: l'activityId della produzione non viene aggiornato quando passa dentro al dialog).
+
 2015-08-31 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Corretto il cambio di lingua in tutti i pannelli.
